<resources>
    <string name="app_name">Hypnosture</string>
    <string name="Username">Username or Email</string>
    <string name="Password">Password</string>
    <string name="Button">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_login">Sign in</string>
    <string name="SUBMIT">SUBMIT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_homescreen">Homescreen</string>

    <!-- Strings related to SIGN UP -->
    <string name="signup_name">Username</string>
    <string name="signup_email">Email Address</string>
    <string name="signup_password">Password</string>
    <string name="signup_ConfirmPassword">Confirm Password</string>
    <string name="title_activity_performance_statistics">PerformanceStatistics</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to Performance Statistics -->
    <string name="performance_statistics">Performance Statistics</string>
    <string name="tab_text_1">Week 1</string>
    <string name="tab_text_2">Week 2</string>
    <string name="tab_text_3">Week 3</string>
    <string name="tab_text_4">Week 4</string>


    <!-- Strings related to EDIT PROFILE -->
    <string name="profile">PROFILE</string>
    <string name="profilename">Name</string>
    <string name="profilesex">Sex</string>
    <string name="profilebdate">Birthdate:</string>
    <string name="profilemale">Male</string>
    <string name="profilefem">Female</string>
    <string name="profilebtn">OK</string>
    <string name="change_pass">Profile</string>


    <!-- Strings related to LOGOUT -->
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="sentence"></string>

    <!-- Strings related to Calibrate -->
    <string name="direction">Try to hit the dot 3 times.
        If you were able to hit the dot comfortably with the
        posture and positioning of the device, the device correctly worn.
        If not, try to adjust the device on your neck and try to calibrate again.</string>
    <string name="okbtn">OK</string>
    <string name="calib">CALIBRATE</string>

    <!-- Strings related to Admin -->
    <string name="viewStr">VIEW</string>
    <string name="updateStr">UPDATE</string>
    <string name="deleteStr">DELETE</string>
    <string name="createStr">CREATE</string>
    <string name="adminStr">ADMINISTRATOR</string>
    <string name="search">Search Account</string>

    <!-- Strings related to Settings -->
    <string name="calibStr">CALIBRATE</string>
    <string name="saveStr">SAVE</string>
    <string name="settings">SETTINGS</string>
    <string name="postureStr">POSTURE VIBRATION</string>
    <string name="delayStr">DELAY</string>
    <string name="snoreStr">SNORE VIBRATION</string>
    <string name="snoreLevelStr">SNORE LEVEL</string>

    <string name="information">Information</string>
    <string name="updownExercise_Problem">Problem: Incorrect head posture deteriorates neck movement functions
                                          to strain muscles and joints. In results, only limited parts are used.</string>


    <!-- Strings related to Settings -->
    <string name="changepass">CHANGE PASSWORD</string>
    <string name="change">CHANGE</string>
    <string name="stringpass">Enter new password</string>

    <!-- Strings related to exercises -->
    <string name="button_ok">OK</string>

    <!-- Strings related to homescreen -->
    <string name="title_home">Home</string>
    <string name="title_Gallery">Gallery</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_menu">Menu</string>
    <string name="profile_">Profile</string>
    <string name="performancestat">Performance Statistic</string>
    <string name="logout_">Log Out</string>
    <string name="recommend">Recommendations</string>
    <string name="settings_">Settings</string>
    <string name="snore">Snore Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to navdrawer -->
    <string name="nav_home">Home</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_Exercise">Exercise</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_perfstat">Performance Track</string>
    <string name="drawer_recommendations">Recommendations</string>
    <string name="drawer_snore">Snore Track</string>
    <string name="drawer_logout">Log Out</string>
    <string name="act_perstat">Performance Statistics</string>
    <string name="performance_track">Performance Track</string>
    <string name="act_profile">Profile</string>
    <string name="act_recom">Recommendation</string>
    <string name="act_snore">Snore Track</string>
    <string name="act_setting">Settings</string>

    <!-- Strings related to screenshot -->
    <string name="sharing_text">Your sharing text goes here…</string>
    <string name="share_title">Share Screenshot</string>
    <string name="screenshot_take_failed">Failed to take screenshot!!</string>
    <string name="wait">Please wait…</string>
    <string name="full_page_screenshot">Full Page Screenshot</string>
    <string name="hidden_text">Hidden Text</string>
    <string name="custom_page_screenshot">Custom Page Screenshot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Gallery-->
    <string name="improper_desc">This is an improper posture. Click the button below to see posture exercises and recommendations.</string>
</resources>
