<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signupbgcolor"
    tools:context="com.google.hangouts.hypnosture.ChangingPassword">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
           />

        <TextView
            android:id="@+id/changepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/changepass"
            android:textColor="@color/LoginEdittextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/changepassEditText"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/changeBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:hint="@string/stringpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/changeBtn"
            android:layout_width="120dp"
            android:onClick="changePassword"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="229dp"
            android:background="@color/ButtonColor"
            android:text="@string/change"
            android:textColor="@color/LoginEdittextColor"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="536dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
