<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.hangouts.hypnosture.EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="165sp"
            android:layout_height="160sp"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/profilehome"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="107dp" />


        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/profileImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/profile"
            android:textColor="@color/LoginEdittextColor"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/displayVerification"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/profilename"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="267dp" />


        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:text="@string/profilesex"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="390dp" />


        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg"
            android:layout_centerHorizontal="true"
            android:text="@string/profilebdate"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="447dp" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birthdate"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="date"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="483dp" />

        <Button
            android:id="@+id/okbutton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/profile"
            android:layout_alignRight="@+id/profile"
            android:layout_below="@+id/birthday"
            android:background="@color/ButtonColor"
            android:text="@string/profilebtn"
            android:textColor="@color/LoginEdittextColor" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_alignEnd="@+id/birthday"
            android:layout_alignRight="@+id/birthday"
            android:layout_below="@+id/sex"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sex"
                android:layout_toLeftOf="@+id/sex"
                android:layout_toStartOf="@+id/sex"
                android:checked="false"
                android:onClick="rbclick"
                android:text="Male"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/birthday"
                android:layout_alignRight="@+id/birthday"
                android:layout_below="@+id/sex"
                android:checked="false"
                android:onClick="rbclick"
                android:text="Female"
                android:textSize="22sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/displayVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_centerHorizontal="true"
            android:text="Verified"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


        <Button
            android:id="@+id/changebutton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/profileImage"
            android:layout_alignRight="@+id/profileImage"
            android:layout_below="@+id/okbutton"
            android:background="@color/ButtonColor"
            android:text="@string/changepass"
            android:textColor="@color/LoginEdittextColor"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="512dp" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
